[gd_scene load_steps=9 format=3 uid="uid://bmqdrl4gr8ikv"]

[ext_resource type="Script" path="res://scenes/ui/menu/main.gd" id="1_bjv5w"]
[ext_resource type="PackedScene" uid="uid://dk3207gtw8dmw" path="res://scenes/ui/menu/main_menu/main_menu.tscn" id="1_hb36d"]
[ext_resource type="PackedScene" uid="uid://day3oq358din7" path="res://scenes/ui/menu/start_menu/start_menu.tscn" id="2_ruy6j"]
[ext_resource type="PackedScene" uid="uid://3phbp3v6np27" path="res://scenes/ui/menu/settings_menu/settings_menu.tscn" id="3_1n28g"]
[ext_resource type="PackedScene" uid="uid://ddl6hmbolemig" path="res://scenes/ui/menu/player_number_selection_menu/player_number_selection_menu.tscn" id="4_8pmct"]
[ext_resource type="PackedScene" uid="uid://c3ovvx3oxxrwr" path="res://scenes/ui/menu/character_selection_menu/character_selection_menu.tscn" id="5_gl5ct"]

[sub_resource type="InputEventAction" id="InputEventAction_pbehn"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_0heav"]
events = [SubResource("InputEventAction_pbehn")]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjv5w")

[node name="StartMenu" parent="." instance=ExtResource("2_ruy6j")]
visible = false
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainMenu" parent="VBoxContainer/PanelContainer" instance=ExtResource("1_hb36d")]
visible = false
layout_mode = 2

[node name="SettingsMenu" parent="VBoxContainer/PanelContainer" instance=ExtResource("3_1n28g")]
visible = false
layout_mode = 2

[node name="PlayerNumberSelectionMenu" parent="VBoxContainer/PanelContainer" instance=ExtResource("4_8pmct")]
visible = false
layout_mode = 2

[node name="CharacterSelectionMenu" parent="VBoxContainer/PanelContainer" instance=ExtResource("5_gl5ct")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
shortcut = SubResource("Shortcut_0heav")
text = "Back"

[connection signal="start_game" from="StartMenu" to="." method="_on_start_menu_start_game"]
[connection signal="local_game" from="VBoxContainer/PanelContainer/MainMenu" to="." method="_on_main_menu_local_game"]
[connection signal="online_game" from="VBoxContainer/PanelContainer/MainMenu" to="." method="_on_main_menu_online_game"]
[connection signal="settings" from="VBoxContainer/PanelContainer/MainMenu" to="." method="_on_main_menu_settings"]
[connection signal="player_number_selected" from="VBoxContainer/PanelContainer/PlayerNumberSelectionMenu" to="." method="_on_player_number_selection_menu_player_number_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
